<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/header_notes"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/new_task_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_note_hint"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >


        <EditText
            android:id="@+id/set_date_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:focusable="false"
            android:hint="@string/set_date_hint"
            android:inputType="date"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/add_note_button"
            android:background="@color/DAcolor"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/increase" />

    </LinearLayout>

    <ListView
        android:id="@+id/todo_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true" />

</LinearLayout>
