<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ksk.daily_agenda.CreateVoting">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/createVoting_text"
        android:textSize="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:weightSum="1">
        <EditText
            android:id="@+id/createVoting_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/createVoting_name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <EditText
                android:layout_marginTop="15dp"
                android:id="@+id/createVoting_choice"
                android:layout_weight="0.15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/createVoting_choice_hint"/>
            <Button
                android:id="@+id/createVoting_choice_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.85"
                android:background="@color/DAcolor"
                android:textColor="@color/white"
                android:text="@string/increase"/>
        </LinearLayout>
        <ListView
            android:id="@+id/createVoting_choices_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3">
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_weight="0.7">
            <Button
                android:id="@+id/createVoting_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/DAcolor"
                android:textColor="@color/white"
                android:text="@string/createVoting"
                android:layout_marginBottom="10dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
