<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ksk.daily_agenda.CreateGroup">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/createGroup_text"
        android:textSize="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:weightSum="1">
        <EditText
            android:id="@+id/createGroup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/createGroup_name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">
            <Button
                android:id="@+id/createGroup_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/DAcolor"
                android:textColor="@color/white"
                android:text="@string/create_group"
                android:layout_marginBottom="10dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
